overflow x fix

--- a/background.css
+++ b/background.css
@@ -1,10 +1,15 @@
+html{
+      overflow-x: hidden;
 
+}
 body{
   margin:0;
   padding:0;
   color: green;
   font-family:sans-serif;
   font-size:160%;
+  overflow-x: hidden;
+
 }
 .title {
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
